# StlAllocator

./: CMakeLists.txt  README.md  cppcheck.sh.in
benchmarks/: CMakeLists.txt  benchmark.cpp
src/: HotAllocator.h  SecurityHasher.h  main.cpp  main1.cpp1
